# docker-images

.github/workflows/: build-sealed-secrets-keys-backup.yaml
caddy/: Dockerfile  Makefile
ddclient/: Dockerfile  Makefile  README.md  ddclient.conf
fileflows/: Dockerfile  docker-entrypoint.sh
homelab-exporter/: Dockerfile  Makefile  go.mod  main.go
homelab-exporter-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  flake.nix  shell.nix
homelab-exporter-rs/.direnv/: nix-profile-.968.9d692a724e7  nix-profile-.968.9d692a724e7.rc
homelab-exporter-rs/src/: .main.rs.rustfmt  main.rs
homelab-power-aggregator/: go.mod  main.go
pgbackrest/: Dockerfile  Makefile  crontab  entrypoint.sh  go.mod  main.go
postgres/: Dockerfile  Makefile
sealed-secrets-keys-backup/: .dockerignore  Dockerfile  Makefile  Session.vim  Tiltfile  go.mod  go.sum  main.go
sealed-secrets-keys-backup/k8s/: cronjob.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pv.yaml  pvc.yaml  rbac.yaml
sealed-secrets-master-key-backup/: Dockerfile  Session.vim  Tiltfile  go.mod
sealed-secrets-master-key-backup/k8s/: deployment.yaml  kustomization.yaml
tiddlywiki/: Dockerfile  Makefile  Session.vim  entrypoint.sh
wireguard_dnsmasq/: Dockerfile  Makefile  entrypoint.sh  get_nameservers.pl
wireguard_dnsmasq/shim/: iptables-backend.sh  killswitch.sh
